<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSky"
    tools:context=".Activity.SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

    </RelativeLayout>
    <ImageView
        android:id="@+id/Image_login"
        android:background="@drawable/addbanner"
        android:layout_width="match_parent"
        android:layout_height="180dp" />
    <ImageView
        android:id="@+id/Image_logo"
        android:background="@drawable/login_logo"
        android:layout_below="@id/Image_login"
        android:layout_centerInParent="true"
        android:layout_width="120dp"
        android:layout_marginTop="-50dp"
        android:layout_height="100dp" />
    <ScrollView
        android:layout_above="@id/Text_signUp"
        android:layout_below="@id/Image_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:visibility="gone"
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up Now"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/Text_login"
        android:layout_below="@id/Login"
        android:text="Please fill details and create account"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/Liner_SignUp"
        android:layout_below="@id/Text_login"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Student_Image">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/name"
            android:fontFamily="@font/mulilight"
            android:id="@+id/Edit_Username"
            android:inputType="textEmailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/full_name" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Liner_signup1"
        android:layout_below="@id/Liner_SignUp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Student_Image">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/Edit_Email"
                android:fontFamily="@font/mulilight"
                android:inputType="textEmailAddress"
                android:drawablePadding="5dp"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
            <LinearLayout
                android:id="@+id/Liner_sign"
                android:layout_below="@id/Liner_signup1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Student_Image">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:id="@+id/Edit_Phone"
                        android:maxLength="12"
                        android:inputType="phone"
                        android:fontFamily="@font/mulilight"
                        android:drawablePadding="5dp"
                        android:hint="@string/phone_User" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
    <LinearLayout
        android:id="@+id/Liner_signup2"
        android:layout_below="@id/Liner_sign"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Student_Image">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/Edit_Password"
                android:inputType="textPassword"
                android:fontFamily="@font/mulilight"
                android:drawablePadding="5dp"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Liner_Confirm"
        android:layout_below="@id/Liner_signup2"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Student_Image">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/Edit_Confirm"
                android:inputType="textPassword"
                android:fontFamily="@font/mulilight"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/Liner_OTP"
        android:layout_below="@id/Liner_Confirm"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/OTP"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Student_Image">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/Edit_OTP"
                android:inputType="phone"
                android:drawablePadding="5dp"
                android:hint="Enter PIN" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/Progress_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <FrameLayout
                android:id="@+id/Login_frame"
                android:layout_below="@id/Liner_OTP"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="right"
                android:layout_weight="1"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shapelogout">
                <ImageView
                    android:id="@+id/shine_img1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_animation"/>

                <Button
                    android:id="@+id/Button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Linear_forget"
                    android:layout_gravity="center"
                    android:text="Sign Up"
                    android:textColor="@color/colorWhite"
                    android:background="@null"/>
            </FrameLayout>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/Login_frame"
                android:orientation="horizontal"
                android:id="@+id/Linear_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/CheckBox"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/mulilight"
                    android:id="@+id/Term_condition"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:text="By Signing Up, I agree to the terms &amp; conditions."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <TextView
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:id="@+id/Text_signUp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:fontFamily="@font/mulilight"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Have an account? Login"/>



</RelativeLayout>


